tests/invalids/writeId.gt
proc main ()
    int m;
begin
    write m;
end
